--- a/slide with cross fade/index.html
+++ b/slide with cross fade/index.html
@@ -14,11 +14,10 @@
 <body>
 
     <div id="content">
-        <img src="image1.jpg" alt="slideshow image" id="myimage">
+        <img src="slides/image1.jpg" alt="slideshow image" id="myimage">
     </div>
 
     <p id="links"><a href="#" id="previous">previous</a><a href="#" id="next">next</a></p>
-
 </body>
 
 </html>
