--- a/distance converter/index.html
+++ b/distance converter/index.html
@@ -13,7 +13,9 @@
 	<!--/ /-------- My Styles --------/ /-->
 	<link href="styles.css" rel="stylesheet">
 
+	<script src="script.js" defer></script>
 </head>
+
 
 <body>
 
