--- a/advanced distance converter/index.html
+++ b/advanced distance converter/index.html
@@ -12,7 +12,7 @@
 	
 	<!--/ /-------- My Styles --------/ /-->
 	<link href="styles.css" rel="stylesheet">
-
+	<script src="script.js" defer></script>
 </head>
 
 <body>
@@ -34,6 +34,5 @@
     </div>
     
     <p id="directions">Press the "K" key to switch to kilometer converstion, press the "M" key to switch to mile conversion</p>
-
 </body>
 </html>
